--- a/relax and breathe/meditate/index.html
+++ b/relax and breathe/meditate/index.html
@@ -1,55 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Me Calm</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <section class="app-wrapper">
-        <video class="video" loop="loop" muted="" autoplay >
-            <source src="./video/sea.mp4" type="video/mp4" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css" />
+    <title>Audio App</title>
+  </head>
+  <body>
+    <div class="app">
+      <div class="vid-container">
+        <video loop >
+          <source src="./video/rain.mp4"  type="video/mp4">
         </video>
-        <div class="media-controls">
-            <svg class="range-outline" width="353" height="353" viewBox="0 0 453 453" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <circle cx="226.5" cy="226.5" r="216.5" stroke="#dbd2f6" stroke-width="20" />
-            </svg>
-            <button class="play-pause-btn play"></button>
-            <svg class="seeker-outline" width="353" height="353" viewBox="0 0 453 453" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <circle cx="226.5" cy="226.5" r="216.5" stroke="#6c20c5" stroke-width="20" />
-            </svg>
         </div>
-        <div class="sound-picker">
-            <button class="music-select-btn" data-music="./music/seafull.mp3" data-video="./video/sea.mp4">
-                <img src="./icons/sea.svg" alt="sea music select" title="Sound of sea">
-            </button>
-            <button class="music-select-btn" data-music="./music/forest.mp3" data-video="./video/forest.mp4">
-                <img src="./icons/forest.svg" alt="forest music select" title="Sound of forest">
-            </button>
-            <button class="music-select-btn" data-music="./music/birds.mp3" data-video="./video/birds.mp4">
-                <img src="./icons/birds.svg" alt="birds music select" title="Sound of birds">
-            </button>
+        <div class="time-select">
+          <button data-time="10">2 Minutes</button>
+          <button data-time="300" class="medium-mins">5 Minutes</button>
+          <button data-time="600" class="long-mins">10 Minutes</button>
         </div>
-        <div class="time-list">
-            <button class="time-select-btn" data-time="5">
-                5 sec
-            </button>
-            <button class="time-select-btn" data-time="300">
-                5 min
-            </button>
-            <button class="time-select-btn" data-time="600">
-                10 min
-            </button>
-        </div>
-        <h3 class="elapsed-time"><span class="time">5:00</span></h3>
-    </section>
+        <div class="player-container">
+            <audio class="song">
+                <source src="./sounds/rain.mp3" />
+              </audio>
+              <img src="./svg/play.svg" class="play"></img>
+              <svg class="track-outline" width="453" height="453" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="226.5" cy="226.5" r="216.5" stroke="white" stroke-width="20"/>
+                </svg>
+              <svg class="moving-outline" width="453" height="453" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="226.5" cy="226.5" r="216.5" stroke="#018EBA" stroke-width="20"/>
+                </svg>
+              <img src="./svg/replay.svg" class="replay"></img>
+            
+                <h3 class="time-display">0:00</h3>      
+      </div>
+      <div class="sound-picker">
+        <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4" ><img src="./svg/rain.svg" alt=""></button>
+        <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/beach.svg" alt=""></button>
+      </div>
+    </div>
 
-    <script src="script.js"></script>
-</body>
-
+    <script src="app.js"></script>
+  </body>
 </html>
