--- a/relax and breathe/relax.html
+++ b/relax and breathe/relax.html
@@ -34,12 +34,12 @@
                <h2>4-7-8 Technique</h2>
             <p>The 4-7-8 technique forces the mind
                 and body to focus on regulating the breath.</p>
-                <a href="meditate/index.html" class="read" >Read More</a>
+                <a href="https://www.medicalnewstoday.com/articles/324417#:~:text=The%204%2D7%2D8%20breathing,Pranayama%20is%20common%20in%20yoga." class="read" >Read More</a>
             </div>
 
 
             <div class="right">
-                <a class="begin" href="https://www.medicalnewstoday.com/articles/324417#:~:text=The%204%2D7%2D8%20breathing,Pranayama%20is%20common%20in%20yoga.">Begin</a>
+                <a class="begin" href="meditate/index.html">Begin</a>
             </div>
         </div>
         
