--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Relax With Chill App</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -15,7 +15,7 @@
       <header>
         <div class="container">
           <nav class="navigation">
-            <a href="#!" class="logo">Medi.</a>
+            <a href="#!" class="logo">Chill</a>
             <div class="mobile_menu_icon">
               <div class="mobile_menu_toggle"></div>
             </div>
@@ -52,7 +52,8 @@
         <div class="hero_container">
           <div class="hero_content">
             <h1 class="section-heading">Stay Productive & Work Remotely</h1>
-            <p class="text-light">The key to work-from-home success is to create an enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
+            <p class="text-light"> Chill is a meditation and relaxation app that designed to
+              take you some moment to relax and breathe. </p>
             <a href="#!" class="cta_btn">Learn More</a>
           </div>
           <div class="hero_image">
