--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="hero_container">
           <div class="hero_content">
-            <h1 class="section-heading">Stay Productive & Work Remotely</h1>
+            <h1 class="section-heading">Peace Within & Serenity Awaits</h1>
             <p class="text-light"> Chill is a meditation and relaxation app that designed to
               take you some moment to relax and breathe. </p>
             <a href="#!" class="cta_btn">Learn More</a>
