--- a/index.html
+++ b/index.html
@@ -1,69 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relax With Chill App</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>U matter</title>
   </head>
-
   <body>
-    <section id="hero">
-      <!-- Navigation-start -->
-      <header>
-        <div class="container">
-          <nav class="navigation">
-            <a href="#!" class="logo">Chill</a>
-            <div class="mobile_menu_icon">
-              <div class="mobile_menu_toggle"></div>
-            </div>
-            <ul class="nav_menu">
-              <div class="nav_links">
-                <li class="nav_list">
-                  <a href="#!" class="nav_link">Home</a>
-                </li>
-                <li class="nav_list">
-                  <a href="#!" class="nav_link">Music</a>
-                </li>
-                <li class="nav_list">
-                  <a href="#!" class="nav_link">Scene</a>
-                </li>
-                <li class="nav_list">
-                  <a href="relax and breathe/relax.html" class="nav_link">Relax & Breathe</a>
-                </li>
-              </div>
-              <div class="cta_links">
-                <li class="nav_list">
-                  <a href="#!" class="nav_link">Sign In</a>
-                </li>
-                <li class="nav_list">
-                  <a href="#!" class="nav_link active">Sign Up</a>
-                </li>
-              </div>
-            </ul>
-          </nav>
+    <section class="container">
+      <nav>
+        <div class="nav__bar">
+          <a href="#" class="nav__logo">
+            <img src="assets/logo.svg" alt="logo"  />
+            <!-- <span>NATURE</span> -->
+          </a>
+          <div class="nav__menu__btn" id="menu-btn">
+            <i class="ri-menu-3-line"></i>
+          </div>
         </div>
-      </header>
-      <!-- Navigation-end -->
-      <!-- Hero-content-section-start -->
-      <div class="container">
-        <div class="hero_container">
-          <div class="hero_content">
-            <h1 class="section-heading">Peace Within & Serenity Awaits</h1>
-            <p class="text-light"> Chill is a meditation and relaxation app that designed to
-              take you some moment to relax and breathe. </p>
-            <a href="#!" class="cta_btn">Learn More</a>
-          </div>
-          <div class="hero_image">
-            <img src="image.svg" alt="Image" class="hero-img">
-          </div>
+        <ul class="nav__links" id="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Scene</a></li>
+          <li><a href="relax and breathe/relax.html">Relax</a></li>
+          <li><a href="#">Talk</a></li>
+        </ul>
+      </nav>
+      <div class="container__grid">
+        <img src="assets/bg-dots.png" alt="bg" class="bg__1" />
+        <img src="assets/bg-dots.png" alt="bg" class="bg__2" />
+        <img src="assets/bg-dots.png" alt="bg" class="bg__3" />
+        <div class="container__image">
+          <div></div>
+        </div>
+        <div class="container__content">
+          <h1>Peace Is Everything</h1>
+          <h2>Protect Nature to Protect Ourselves</h2>
+          <p>
+            Embark on a journey of a lifetime as you answer the serene and
+            captivating call of nature. Get ready to immerse yourself in the
+            beauty of nature like never before.
+          </p>
+          
         </div>
       </div>
-      <!-- Hero-content-section-end -->
     </section>
-    <script src="script.js"></script>
-  </body>
 
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
+    <script src="main.js"></script>
+  </body>
 </html>
