--- a/relax and breathe/deep breathing/index.html
+++ b/relax and breathe/deep breathing/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
     <title>Breathe-app</title>
   </head>
   <body>
+    <nav>
+      <div class="nav__bar">
+        <a href="#" class="nav__logo">
+          <img src="assets/logo.svg" alt="logo"  />
+          <!-- <span>NATURE</span> -->
+        </a>
+        <div class="nav__menu__btn" id="menu-btn">
+          <i class="ri-menu-3-line"></i>
+        </div>
+      </div>
+      <ul class="nav__links" id="nav-links">
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="#">Music</a></li>
+        <li><a href="#">Scene</a></li>
+        <li><a href="../relax.html">Relax</a></li>
+        <li><a href="#">Talk</a></li>
+      </ul>
+    </nav>
+
     <div class="preloader"></div>
 
     <h1>Breathe-App</h1>
