--- a/relax and breathe/meditate/index.html
+++ b/relax and breathe/meditate/index.html
@@ -6,9 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="header.css">
     <title>Audio App</title>
   </head>
   <body>
+    <nav>
+      <div class="nav__bar">
+        <a href="#" class="nav__logo">
+          <img src="assets/logo.svg" alt="logo"  />
+          <!-- <span>NATURE</span> -->
+        </a>
+        <div class="nav__menu__btn" id="menu-btn">
+          <i class="ri-menu-3-line"></i>
+        </div>
+      </div>
+      <ul class="nav__links" id="nav-links">
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="#">Music</a></li>
+        <li><a href="#">Scene</a></li>
+        <li><a href="../relax.html">Relax</a></li>
+        <li><a href="#">Talk</a></li>
+      </ul>
+    </nav>
     <div class="app">
       <div class="vid-container">
         <video loop >
