--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
         <ul class="nav__links" id="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">Scene</a></li>
+          <li><a href="music/music.html">Music</a></li>
+          <li><a href="scene/scene.html">Scene</a></li>
           <li><a href="relax and breathe/relax.html">Relax</a></li>
-          <li><a href="#">Talk</a></li>
+          <li><a href="hope/hope.html">Talk</a></li>
         </ul>
       </nav>
       <div class="container__grid">
