--- a/relax and breathe/deep breathing/index.html
+++ b/relax and breathe/deep breathing/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <title>Breathe-app</title>
+    <script src="https://kit.fontawesome.com/9fedb5dd50.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
+
+    <div class="hello">
+      <a class="wow" href=""><img src="logo.svg" alt=""></a>
+      
+      <div class="nice">
+      <a href="../../index.html"><i class="fa-solid fa-house"></i>Home</a>
+      <a href="../../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
+      <a href="../../scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
+      <a href="../../relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a>
+      <a href="../../hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
+      </div>
+      
+  </div>
+
+
     <div class="preloader"></div>
 
     <h1>Breathe-App</h1>
