--- a/relax and breathe/meditate/index.html
+++ b/relax and breathe/meditate/index.html
@@ -7,8 +7,23 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <title>Audio App</title>
+    <script src="https://kit.fontawesome.com/9fedb5dd50.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
+    <div class="hello">
+      <a class="wow" href=""><img src="logo.svg" alt=""></a>
+      
+      <div class="nice">
+      <a href="../../index.html"><i class="fa-solid fa-house"></i>Home</a>
+      <a href="../../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
+      <a href="../../scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
+      <a href="../../relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a>
+      <a href="../../hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
+      </div>
+      
+  </div>
+
     <div class="app">
       <div class="vid-container">
         <video loop >
