--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/9fedb5dd50.js" crossorigin="anonymous"></script>
     <title>U matter</title>
   </head>
   <body>
@@ -23,11 +24,11 @@
           </div>
         </div>
         <ul class="nav__links" id="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="music/music.html">Music</a></li>
-          <li><a href="scene/scene.html">Scene</a></li>
-          <li><a href="relax and breathe/relax.html">Relax</a></li>
-          <li><a href="hope/hope.html">Talk</a></li>
+          <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+          <li><a href="music/music.html"><i class="fa-solid fa-music"></i>Music</a></li>
+          <li><a href="scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a></li>
+          <li><a href="relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a></li>
+          <li><a href="hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a></li>
         </ul>
       </nav>
       <div class="container__grid">
