--- a/relax and breathe/relax.html
+++ b/relax and breathe/relax.html
@@ -19,9 +19,9 @@
         <div class="nice">
         <a href="../index.html"><i class="fa-solid fa-house"></i>Home</a>
         <a href="../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
-        <a href="../scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
+        <a href="../Scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
         <a href=""><i class="fa-solid fa-heart-pulse"></i>Relax</a>
-        <a href="../hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
+        <a href="../Talk To Hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
         </div>
         
     </div>
