--- a/relax and breathe/meditate/index.html
+++ b/relax and breathe/meditate/index.html
@@ -15,11 +15,11 @@
       <a class="wow" href=""><img src="logo.svg" alt=""></a>
       
       <div class="nice">
-      <a href="../../index.html"><i class="fa-solid fa-house"></i>Home</a>
-      <a href="../../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
-      <a href="../../scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
-      <a href="../../relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a>
-      <a href="../../hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
+        <a href="../../index.html"><i class="fa-solid fa-house"></i>Home</a>
+        <a href="../../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
+        <a href="../../Scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
+        <a href="../../relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a>
+        <a href="../../Talk To Hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
       </div>
       
   </div>
