--- a/music/music.html
+++ b/music/music.html
@@ -32,14 +32,14 @@
 
    
 
-    <div class="gana">
+    <!-- <div class="gana">
       <h1>Natural Song Search</h1>
       <div class="search-container">
         <input type="text" id="search-input" placeholder="Enter a natural keyword (e.g., 'love', 'rain')">
         <button id="search-button">Search</button>
       </div>
       <div id="music-list" class="music-list"></div>
-    </div>
+    </div> -->
 
     <div class="music-box">
       <div class="musics">
