--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="nav__links" id="nav-links">
           <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
           <li><a href="music/music.html"><i class="fa-solid fa-music"></i>Music</a></li>
-          <li><a href="./Scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a></li>
+          <li><a href="Scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a></li>
           <li><a href="relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a></li>
           <li><a href="./Talk To Hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a></li>
         </ul>
