--- a/relax and breathe/deep breathing/index.html
+++ b/relax and breathe/deep breathing/index.html
@@ -16,7 +16,7 @@
       <div class="nice">
       <a href="../../index.html"><i class="fa-solid fa-house"></i>Home</a>
       <a href="../../music/music.html"><i class="fa-solid fa-music"></i>Music</a>
-      <a href="../../Scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
+      <a href="../../scene/scene.html"><i class="fa-solid fa-mountain-sun"></i>Scene</a>
       <a href="../../relax and breathe/relax.html"><i class="fa-solid fa-heart-pulse"></i>Relax</a>
       <a href="../../Talk To Hope/hope.html"><i class="fa-brands fa-facebook-messenger"></i>Talk</a>
       </div>
